# session-recorder

./: .gitignore  README.md  TODO.md  config.yml  pyproject.toml
session_recorder/: cli.py  device.py  receiver.py  store.py
tests/: test_device.py  test_receiver.py  test_session_recorder.py  test_store.py
