[project]
name = "session-recorder"
version = "0.1"
description = "Record Vicon and Logs from a QA session"
readme = "README.md"
authors = [{name = "Isaac Bonora"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "fabric>=3.2",
    "loguru>=0.7",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/isbonora/session-recorder"
Changelog = "https://github.com/isbonora/session-recorder/releases"
Issues = "https://github.com/isbonora/session-recorder/issues"
CI = "https://github.com/isbonora/session-recorder/actions"

[project.scripts]
session-recorder = "session_recorder.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
